// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper renders the correct number of bullets 1`] = `
@media  {
  .c-fkUJsw {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-dhzjXW {
    display: flex;
  }

  .c-knmidH {
    justify-content: space-between;
  }

  .c-hJHcXb {
    position: relative;
  }

  .c-hJHcXb:not(:last-child) .c-dhzjXW:where(.c-fAdXQt)::after {
    content: "";
    position: absolute;
  }

  .c-giGIoG {
    position: relative;
    justify-content: center;
    align-items: center;
  }

  .c-fAdXQt {
    padding: var(--space-2);
    justify-content: center;
    align-items: center;
    width: var(--sizes-3);
    height: var(--sizes-3);
    border-radius: 50%;
    border: none;
    background: var(--colors-tonal50);
    font-family: var(--fonts-body);
    font-weight: 600;
    font-size: var(--fontSizes-md);
  }
}

@media  {
  .c-fkUJsw-eYnvrx-size-sm {
    font-size: var(--fontSizes-sm);
    line-height: 1.53;
    height: var(--sizes-3);
    padding-left: var(--space-4);
    padding-right: var(--space-4);
  }

  .c-hJHcXb-dZXHHo-separator-highlight:not(:last-child) .c-dhzjXW:where(.c-fAdXQt)::after {
    background: var(--colors-primary);
  }

  .c-fAdXQt-cFMdtk-state-active {
    background: white;
    color: var(--colors-primary);
    border: 2px solid;
    border-color: currentColor;
  }

  .c-hJHcXb-flKOkB-separator-normal:not(:last-child) .c-dhzjXW:where(.c-fAdXQt)::after {
    background: var(--colors-tonal50);
  }

  .c-fAdXQt-jdelko-state-normal {
    background: var(--colors-tonal50);
    color: var(--colors-tonal400);
  }
}

@media  {
  .c-fkUJsw-fSssiS-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
  }

  .c-fkUJsw-fSssiS-cv[disabled] {
    border-color: var(--colors-tonal400);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):hover,
  .c-fkUJsw-fSssiS-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primaryMid);
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):active {
    color: var(--colors-primaryDark);
  }

  .c-fkUJsw-gsycxF-cv {
    background: var(--colors-primary);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv[disabled] {
    background: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):hover,
  .c-fkUJsw-gsycxF-cv:not([disabled]):focus {
    background: var(--colors-primaryMid);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):active {
    background: var(--colors-primaryDark);
  }
}

@media  {
  .c-PJLV-ibhOcIJ-css {
    width: 100%;
    display: grid;
    grid-template-columns: 1fr auto 1fr;
  }

  .c-dhzjXW-ikYbEnS-css:not(:last-child) .c-dhzjXW:where(.c-fAdXQt)::after {
    width: var(--sizes-1);
    height: var(--sizes-1);
  }

  .c-dhzjXW-idGcKFW-css {
    cursor: auto;
  }

  .c-fkUJsw-icKSZB-css {
    margin-left: auto;
  }

  .c-dhzjXW-igsmDXe-css {
    cursor: pointer;
  }
}

<div>
  <div
    aria-label="progress"
    class="c-PJLV c-PJLV-ibhOcIJ-css"
  >
    <button
      class="c-fkUJsw c-fkUJsw-eYnvrx-size-sm c-fkUJsw-fSssiS-cv"
      disabled=""
      type="button"
    >
      Back
    </button>
    <div
      class="c-dhzjXW c-knmidH"
    >
      <div
        class="c-dhzjXW c-hJHcXb c-hJHcXb-dZXHHo-separator-highlight c-dhzjXW-ikYbEnS-css"
      >
        <div
          class="c-dhzjXW c-giGIoG"
        >
          <button
            aria-current="step"
            aria-label="step 1"
            class="c-dhzjXW c-fAdXQt c-fAdXQt-cFMdtk-state-active c-dhzjXW-igsmDXe-css"
          >
            1
          </button>
        </div>
      </div>
      <div
        class="c-dhzjXW c-hJHcXb c-hJHcXb-flKOkB-separator-normal c-dhzjXW-ikYbEnS-css"
      >
        <div
          class="c-dhzjXW c-giGIoG"
        >
          <button
            aria-label="step 2"
            class="c-dhzjXW c-fAdXQt c-fAdXQt-jdelko-state-normal c-dhzjXW-idGcKFW-css"
          >
            2
          </button>
        </div>
      </div>
      <div
        class="c-dhzjXW c-hJHcXb c-hJHcXb-flKOkB-separator-normal c-dhzjXW-ikYbEnS-css"
      >
        <div
          class="c-dhzjXW c-giGIoG"
        >
          <button
            aria-label="step 3"
            class="c-dhzjXW c-fAdXQt c-fAdXQt-jdelko-state-normal c-dhzjXW-idGcKFW-css"
          >
            3
          </button>
        </div>
      </div>
    </div>
    <button
      class="c-fkUJsw c-fkUJsw-eYnvrx-size-sm c-fkUJsw-gsycxF-cv c-fkUJsw-icKSZB-css"
      type="button"
    >
      Next
    </button>
  </div>
</div>
`;

exports[`Stepper renders the correct number of bullets when a controlled component 1`] = `
@media  {
  .c-fkUJsw {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-dhzjXW {
    display: flex;
  }

  .c-knmidH {
    justify-content: space-between;
  }

  .c-hJHcXb {
    position: relative;
  }

  .c-hJHcXb:not(:last-child) .c-dhzjXW:where(.c-fAdXQt)::after {
    content: "";
    position: absolute;
  }

  .c-giGIoG {
    position: relative;
    justify-content: center;
    align-items: center;
  }

  .c-fAdXQt {
    padding: var(--space-2);
    justify-content: center;
    align-items: center;
    width: var(--sizes-3);
    height: var(--sizes-3);
    border-radius: 50%;
    border: none;
    background: var(--colors-tonal50);
    font-family: var(--fonts-body);
    font-weight: 600;
    font-size: var(--fontSizes-md);
  }

  .c-fIXJvv {
    color: var(--colors-tonal600);
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-fIXJvv > .c-fIXJvv:before,
  .c-fIXJvv > .c-fIXJvv:after {
    display: none;
  }
}

@media  {
  .c-fkUJsw-eYnvrx-size-sm {
    font-size: var(--fontSizes-sm);
    line-height: 1.53;
    height: var(--sizes-3);
    padding-left: var(--space-4);
    padding-right: var(--space-4);
  }

  .c-hJHcXb-dZXHHo-separator-highlight:not(:last-child) .c-dhzjXW:where(.c-fAdXQt)::after {
    background: var(--colors-primary);
  }

  .c-fAdXQt-cFMdtk-state-active {
    background: white;
    color: var(--colors-primary);
    border: 2px solid;
    border-color: currentColor;
  }

  .c-hJHcXb-flKOkB-separator-normal:not(:last-child) .c-dhzjXW:where(.c-fAdXQt)::after {
    background: var(--colors-tonal50);
  }

  .c-fAdXQt-jdelko-state-normal {
    background: var(--colors-tonal50);
    color: var(--colors-tonal400);
  }

  .c-fAdXQt-lkRQpS-state-viewed {
    background: var(--colors-primary);
    color: white;
  }

  .c-knmidH-ejCoEP-orientation-horizontal {
    flex-direction: row;
  }

  .c-hJHcXb-lkWzkU-orientation-horizontal {
    flex-direction: column;
    align-items: center;
  }

  .c-hJHcXb-lkWzkU-orientation-horizontal:not(:last-child) .c-dhzjXW:where(.c-fAdXQt)::after {
    height: 4px !important;
    left: 100%;
  }

  .c-knmidH-iTKOFX-orientation-vertical {
    flex-direction: column;
  }

  .c-hJHcXb-edqGTp-orientation-vertical {
    flex-direction: row;
    align-items: center;
  }

  .c-hJHcXb-edqGTp-orientation-vertical:not(:last-child) .c-dhzjXW:where(.c-fAdXQt)::after {
    width: 4px !important;
    top: 100%;
  }

  .c-fIXJvv-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-fIXJvv-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-fIXJvv-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }
}

@media  {
  .c-fkUJsw-fSssiS-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
  }

  .c-fkUJsw-fSssiS-cv[disabled] {
    border-color: var(--colors-tonal400);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):hover,
  .c-fkUJsw-fSssiS-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primaryMid);
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):active {
    color: var(--colors-primaryDark);
  }

  .c-fkUJsw-gsycxF-cv {
    background: var(--colors-primary);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv[disabled] {
    background: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):hover,
  .c-fkUJsw-gsycxF-cv:not([disabled]):focus {
    background: var(--colors-primaryMid);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):active {
    background: var(--colors-primaryDark);
  }
}

@media  {
  .c-PJLV-ibhOcIJ-css {
    width: 100%;
    display: grid;
    grid-template-columns: 1fr auto 1fr;
  }

  .c-dhzjXW-ikYbEnS-css:not(:last-child) .c-dhzjXW:where(.c-fAdXQt)::after {
    width: var(--sizes-1);
    height: var(--sizes-1);
  }

  .c-dhzjXW-idGcKFW-css {
    cursor: auto;
  }

  .c-fkUJsw-icKSZB-css {
    margin-left: auto;
  }

  .c-dhzjXW-igsmDXe-css {
    cursor: pointer;
  }
}

<div>
  <div
    aria-label="progress"
    class="c-PJLV c-PJLV-ibhOcIJ-css"
  >
    <button
      class="c-fkUJsw c-fkUJsw-eYnvrx-size-sm c-fkUJsw-fSssiS-cv"
      disabled=""
      type="button"
    >
      Back
    </button>
    <div
      class="c-dhzjXW c-knmidH"
    >
      <div
        class="c-dhzjXW c-hJHcXb c-hJHcXb-dZXHHo-separator-highlight c-dhzjXW-ikYbEnS-css"
      >
        <div
          class="c-dhzjXW c-giGIoG"
        >
          <button
            aria-current="step"
            aria-label="step 1"
            class="c-dhzjXW c-fAdXQt c-fAdXQt-cFMdtk-state-active c-dhzjXW-igsmDXe-css"
          >
            1
          </button>
        </div>
        <div
          class="c-PJLV"
        >
          <p
            class="c-fIXJvv c-fIXJvv-gvmVBy-size-md"
          >
            Set up your parent account
          </p>
        </div>
      </div>
      <div
        class="c-dhzjXW c-hJHcXb c-hJHcXb-flKOkB-separator-normal c-dhzjXW-ikYbEnS-css"
      >
        <div
          class="c-dhzjXW c-giGIoG"
        >
          <button
            aria-label="step 2"
            class="c-dhzjXW c-fAdXQt c-fAdXQt-jdelko-state-normal c-dhzjXW-idGcKFW-css"
          >
            2
          </button>
        </div>
        <div
          class="c-PJLV"
        >
          <p
            class="c-fIXJvv c-fIXJvv-gvmVBy-size-md"
          >
            Create student profile
          </p>
        </div>
      </div>
    </div>
    <button
      class="c-fkUJsw c-fkUJsw-eYnvrx-size-sm c-fkUJsw-gsycxF-cv c-fkUJsw-icKSZB-css"
      type="button"
    >
      Next
    </button>
  </div>
</div>
`;
